--- a/matugen_templates/config.toml
+++ b/matugen_templates/config.toml
@@ -17,11 +17,11 @@ input_path = '~/.config/matugen/templates/hyprlock.conf'
 output_path = '~/.config/themes/matugen/hyprlock.conf'
 
 [templates.mako]
-input_path  = "~/.config/matugen/templates/mako.conf.tmpl"
+input_path = "~/.config/matugen/templates/mako.conf.tmpl"
 output_path = "~/.config/themes/matugen/mako.ini"
 
 [templates.swayosd]
-input_path  = "~/.config/matugen/templates/swayosd.css.tmpl"
+input_path = "~/.config/matugen/templates/swayosd.css.tmpl"
 output_path = "~/.config/themes/matugen/swayosd.css"
 
 [templates.waybar]
@@ -35,3 +35,7 @@ output_path = '~/.config/themes/matugen/gtk.css'
 [templates.walker]
 input_path = '~/.config/matugen/templates/walker.css'
 output_path = '~/.config/themes/matugen/walker.css'
+
+[templates.nvim]
+input_path = '~/.config/matugen/templates/neovim.tmpl'
+output_path = '~/.config/themes/matugen/neovim.lua'
