--- a/templates/mako.ini
+++ b/templates/mako.ini
@@ -4,7 +4,7 @@ width=420
 height=110
 
 text-color={foreground}
-border-color={color5}
+border-color={accent}
 background-color={background}
 padding=10
 border-size=2
